[package]
name = "ring-arch-mismatch-demo"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@lancastr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = { version = "0.14.6", optional = true }

[features]
with-ring = ["ring"]

